# SFML_Project_Linux

./: CMakeLists.txt  README.md  SFML_Linux_Project.kdev4
.kdev4/: SFML_Linux_Project.kdev4
source/: main.cpp
source/Core/: ComponentManager.cpp  ComponentManager.h  Log.cpp  Log.h  Timestep.h
source/Core/Components/: Component.h
source/EntityHealth/: EntityHealth.cpp  EntityHealth.h
source/Player/: Player.cpp  Player.h
